# bloom

./: .git-blame-ignore-revs  .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  check_list.ts  flake.nix  knip.json  package.json
.agent/rules/: bloomscript.md  code-style-guide.md
.agent/workflows/: do-something.md
.github/workflows/: ci.yml  circular.yml  deploy-docs.yml
apps/: README.md
apps/admin-cli/: package.json  tsconfig.json
apps/cli/: package.json
apps/cli/src/: index.ts
apps/discord-bot/: README.md  package.json
apps/discord-bot/src/: bot.ts  db.ts  socket.test.ts  socket.ts
apps/filebrowser/: README.md  index.html  package.json  vite.config.ts
apps/filebrowser-server/: README.md  package.json  tsconfig.json
apps/filebrowser-server/src/: index.ts
apps/filebrowser/src/: App.tsx  index.tsx
apps/filebrowser/src/store/: browser.ts
apps/imagegen/: README.md  index.html  package.json  vite.config.ts
apps/imagegen/src/: App.tsx  main.tsx
apps/imagegen/src/modes/: BlocksMode.tsx  LayerMode.tsx
apps/notes/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/notes-server/: README.md  package.json
apps/notes-server/src/: index.ts  seed.test.ts  seed.ts
apps/notes/src/: App.tsx
apps/playground/: package.json
apps/playground/src/: examples.ts  runtime.ts
apps/server/: package.json
apps/server/src/: index.ts
apps/tui/: README.md  package.json
apps/tui/src/: App.tsx
apps/web/: README.md  package.json  tsconfig.json
apps/web/src/: App.tsx  index.css
crates/apps/filebrowser-server/: Cargo.toml
crates/apps/notes-server/: Cargo.toml
crates/apps/notes-server/src/: main.rs
crates/apps/notes-server/tests/: integration.rs
crates/bloom-cli/: Cargo.toml
crates/bloom-cli/src/: main.rs
crates/bloom-cli/tests/: integration.rs
crates/bloom-core/: Cargo.toml
crates/bloom-core/src/: entity.rs  seed.rs  storage.rs
crates/bloom-ir/: Cargo.toml  opcodes.toml
crates/bloom-ir/src/: sexpr.rs
crates/bloom-ir/tests/: builder_test.rs
crates/bloom-plugin-abi/: Cargo.toml
crates/bloom-runtime/: Cargo.toml
crates/bloom-runtime/src/: context.rs  kernel.rs  lib.rs  opcodes.rs  plugin_loader.rs  plugin_registry.rs
crates/bloom-runtime/tests/: adversarial.rs  capabilities.rs  capability_delegation.rs  complex_workflows.rs  edge_cases.rs  fs_integration.rs  gameloop.rs  integration.rs  multi_entity.rs  object_creation.rs  procgen_integration.rs  scheduler_integration.rs  update_persistence.rs  verb_calling.rs
crates/lotus-cli/: Cargo.toml
crates/lotus-cli/src/: main.rs
crates/lotus-core/: Cargo.toml
crates/lotus-core/src/: entity.rs  storage.rs
crates/lotus-runtime/src/: context.rs  kernel.rs  lib.rs
crates/plugins/ai/: Cargo.toml
crates/plugins/cloud/: Cargo.toml
crates/plugins/diffusers/: Cargo.toml
crates/plugins/fs/: Cargo.toml
crates/plugins/memory/: Cargo.toml
crates/plugins/net/: Cargo.toml
crates/plugins/procgen/: Cargo.toml
crates/plugins/sqlite/: Cargo.toml
crates/plugins/vector/: Cargo.toml
crates/runtime/luajit/: Cargo.toml
crates/syntax/typescript/: Cargo.toml
crates/syntax/typescript/src/: entity_definition.rs  lib.rs  tests.rs  transpiler.rs
crates/transport/websocket-jsonrpc/: Cargo.toml
crates/viwo-cli/: Cargo.toml
crates/viwo-cli/src/: main.rs
crates/viwo-cli/tests/: integration.rs
crates/viwo-core/: Cargo.toml
crates/viwo-core/src/: capability.rs  entity.rs  lib.rs  scheduler.rs  seed.rs  storage.rs
crates/viwo-ir/: Cargo.toml  opcodes.toml
crates/viwo-ir/src/: lib.rs  opcodes.rs  sexpr.rs  tests.rs  validation.rs
crates/viwo-plugin-abi/: Cargo.toml
crates/viwo-plugin-abi/src/: lib.rs
crates/viwo-runtime/: Cargo.toml
crates/viwo-runtime/src/: context.rs  kernel.rs  lib.rs  opcodes.rs  plugin_loader.rs  plugin_registry.rs
crates/viwo-runtime/tests/: adversarial.rs  capabilities.rs  complex_workflows.rs  edge_cases.rs  fs_integration.rs  gameloop.rs  integration.rs  multi_entity.rs  object_creation.rs  procgen_integration.rs  scheduler_integration.rs  update_persistence.rs  verb_calling.rs
crates/viwo-server/: Cargo.toml
crates/viwo-server/src/: lib.rs  plugin_loader.rs  server.rs  session.rs
docs/: README.md  TODO.md  api.md  architecture.md  automation.md  challenges.md  codebase_map.md  codegen.md  design.md  development.md  execution_model.md  index.md  package.json  quality.md  roadmap_safe_coding.md  scripting_spec.md  vision.md  web_frontend.md
docs/.vitepress/: config.mts
docs/apps/: admin-cli.md  cli.md  discord-bot.md  filebrowser-server.md  filebrowser.md  imagegen.md  imagegen_roadmap.md  notes-server.md  notes.md  playground.md  server.md  tui.md  web.md
docs/components/: tui.md  web-editor.md  web_frontend.md
docs/core/: architecture.md  capabilities_guide.md  codebase_map.md  scheduler.md  security.md  seeds.md
docs/design/: rust-port.md
docs/plugins/: ai.md  development.md  diffusers.md  fs.md  memory.md  net.md  procgen.md  sqlite.md  vector.md
docs/reference/: api.md  client.md  shared.md
docs/scripting/: compiler.md  decompiler.md  interpreter.md  spec.md  transpiler.md
ops/circular/: package.json
ops/format/: package.json
ops/lint/: package.json
ops/opcodes/: package.json
ops/readmes/: package.json
ops/test/: package.json
ops/types/: package.json
ops/unused/: package.json
plugins/ai/: package.json
plugins/ai/src/: index.ts  lib.ts  models.ts
plugins/fs/: README.md  package.json
plugins/fs/src/: index.ts  lib.test.ts  lib.ts
plugins/memory/: package.json
plugins/net/: README.md  package.json
plugins/net/src/: index.ts  lib.test.ts  lib.ts
plugins/procgen/: package.json
plugins/procgen/src/: lib.test.ts  lib.ts
plugins/sqlite/src/: lib.test.ts
plugins/vector/: package.json
sandbox/: README.md
scratch/: check_capabilities.ts  std_call_method.ts  verify_hydration.ts  verify_phase_1.ts  verify_sdk_classes.ts
scripts/: check-opcodes.ts
seeds/: chat_tree.test.ts  chat_tree.ts  hotel.test.ts  hotel.ts
xtask/src/: main.rs
(+72 files in other folders)
