[workspace]
resolver = "2"
members = ["crates/lotus-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhizome-lab/lotus"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
libsql = "0.9"
tokio = { version = "1", features = ["full"] }

# Minimize debug build size
[profile.dev]
debug = 0
split-debuginfo = "unpacked"

# Speed up proc-macro and build-script builds
[profile.dev.build-override]
opt-level = 3

# Optimize release builds
[profile.release]
lto = true
codegen-units = 1
strip = true
