[package]
name = "bloom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Bloom runtime"

[[bin]]
name = "bloom"
path = "src/main.rs"

[dependencies]
bloom-core.workspace = true
bloom-ir.workspace = true
bloom-runtime.workspace = true
bloom-transport-websocket-jsonrpc.workspace = true
bloom-syntax-typescript.workspace = true
bloom-runtime-luajit.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
