[package]
name = "viwo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Viwo runtime"

[[bin]]
name = "viwo"
path = "src/main.rs"

[dependencies]
viwo-core.workspace = true
viwo-ir.workspace = true
viwo-runtime.workspace = true
viwo-transport-websocket-jsonrpc.workspace = true
viwo-syntax-typescript.workspace = true
viwo-runtime-luajit.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
