[package]
name = "viwo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Entity system, capabilities, and storage for Viwo"

[dependencies]
viwo-ir.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
