[package]
name = "bloom-notes-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wiki-style notes server with wikilinks and backlinks"

[[bin]]
name = "notes-server"
path = "src/main.rs"

[dependencies]
bloom-core.workspace = true
bloom-runtime = { path = "../../bloom-runtime" }
bloom-transport-websocket-jsonrpc = { path = "../../transport/websocket-jsonrpc" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
futures-util.workspace = true
bloom-ir.workspace = true
