[package]
name = "rhizome-lotus-syntax-typescript"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TypeScript entity definition parser for Lotus"

[dependencies]
rhizome-lotus-ir.workspace = true
rhizome-reed-read-ts.workspace = true
rhizome-reed-sexpr.workspace = true
tree-sitter.workspace = true
arborium-typescript.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
